# BaccaratSimulator

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
src/: baccarat.cpp  baccarat.h  bet_type.h  card_dealer.cpp  card_dealer.h  casino_player.cpp  casino_player.h  main.cpp
